# llm_examples

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  run.py  setup.py
configs/: base_config.yaml  main.yaml  mcsb_finetuning.yaml  mcsb_offline_finetuning.yaml
configs/accelerate/: default_config.yaml  loca_no_ds.yaml  local_with_ds.yaml
configs/hydra/: default.yaml  dev.yaml
configs/llm/: base_hf_llm.yaml  flant5.yaml  gpt2.yaml  llama2.yaml
configs/llm/peft/: lora.yaml
configs/llm/quantization/: 4bit.yaml
configs/opt/: adamw.yaml
configs/task/: mcsb.yaml
ft_example/: tasks.py
ft_example/llm/: __init__.py  anthropic.py  huggingface.py  openai.py  vllm.py
ft_example/mcsb/: mcsb.py  utils.py
llm_examples/: __init__.py  tasks.py  utils.py
llm_examples/llm/: __init__.py  anthropic.py  base.py  huggingface.py  openai.py  vllm.py
llm_examples/mcsb/: mcsb.py
llm_examples/mcsb_ft/: __init__.py  mcsb.py  offline.py  offline_dataset.py  prompts.py  utils.py
